<resources>
    <string name="app_name">IP2</string>
    <string name="backButton">back</string>
    <string name="productImage">ProductImage</string>
    <string name="productName">Name</string>
    <string name="enterName">Enter name</string>
    <string name="productCount">Count</string>
    <string name="applyButton">Apply</string>
    <string name="enterCount">Enter count</string>
    <string name="deleteButton">Delete</string>
    <string name="createText">Create</string>
    <string name="location">Location: </string>
    <string-array name="product_list">
        <item>name1</item>
        <item>name2</item>
        <item>name3</item>
        <item>name4</item>
        <item>name5</item>
        <item>name6</item>
        <item>name7</item>
        <item>name8</item>
        <item>name9</item>
        <item>name10</item>
        <item>name11</item>
        <item>name12</item>
        <item>name13</item>
        <item>name14</item>
        <item>name15</item>
        <item>name16</item>
        <item>name17</item>
        <item>name18</item>
        <item>name19</item>
        <item>name20</item>
    </string-array>
</resources>