<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="360">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/deleteButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productName"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="@id/backButton"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <EditText
        android:id="@+id/productNameChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/enterName"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="46dp"
        app:layout_constraintLeft_toRightOf="@id/backButton"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/productCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/productCount"
        app:layout_constraintLeft_toLeftOf="@id/productName"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <EditText
        android:id="@+id/productCountChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="name"
        android:imeOptions="actionDone"
        android:hint="@string/enterCount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="@id/productNameChange"
        app:layout_constraintRight_toRightOf="@id/productNameChange"
        app:layout_constraintTop_toBottomOf="@id/productNameChange" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/productCount"
        app:layout_constraintLeft_toLeftOf="@id/backButton"
        app:layout_constraintRight_toRightOf="@id/deleteButton"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applyButton"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>